--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,49 +15,84 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/timestamp"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/header"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="20 декабря 2019"></TextView>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/avatar"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@drawable/ic_avatar"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"></ImageButton>
+
+            <TextView
+                android:id="@+id/timestamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginVertical="4dp"
+                app:layout_constraintStart_toEndOf="@id/avatar"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="10sp"
+                android:textColor="#999999"
+                tools:text="20 декабря 2019"></TextView>
+
+            <TextView
+                android:id="@+id/userName"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                app:layout_constraintStart_toEndOf="@id/avatar"
+                app:layout_constraintTop_toBottomOf="@id/timestamp"
+                android:textColor="#000000"
+                android:ellipsize="end"
+                android:singleLine="true"
+                tools:text="Netsdfsdfsdfskdfksdgjfgsidgfusgdfuygsdufygsdfsdfsdfsdfsdfology"></TextView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/postContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            app:layout_constraintTop_toBottomOf="@id/timestamp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
             android:textColor="#000000"
             android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/header"
             tools:text="Моё первое сообщение"></TextView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/postContent"
-            android:paddingVertical="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="0dp"
-            android:layout_marginHorizontal="16dp">
+            android:paddingVertical="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/postContent">
 
             <TextView
                 android:id="@+id/shareCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
-                app:layout_constraintStart_toEndOf="@id/shareIcon"
                 app:layout_constraintBottom_toBottomOf="@id/shareIcon"
+                app:layout_constraintStart_toEndOf="@id/shareIcon"
                 app:layout_constraintTop_toTopOf="parent"
+                android:textColor="#999999"
                 tools:text="15"></TextView>
+
             <ImageButton
-                android:background="@drawable/ic_share"
                 android:id="@+id/shareIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
+                android:background="@drawable/ic_share"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"></ImageButton>
 
@@ -66,16 +101,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
-                app:layout_constraintStart_toEndOf="@id/commentIcon"
                 app:layout_constraintBottom_toBottomOf="@id/commentIcon"
+                app:layout_constraintStart_toEndOf="@id/commentIcon"
                 app:layout_constraintTop_toTopOf="parent"
+                android:textColor="#999999"
                 tools:text="18"></TextView>
+
             <ImageButton
-                android:background="@drawable/ic_chat_bubble"
                 android:id="@+id/commentIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
+                android:background="@drawable/ic_chat_bubble"
                 app:layout_constraintEnd_toStartOf="@id/shareIcon"
                 app:layout_constraintTop_toTopOf="parent"></ImageButton>
 
@@ -84,16 +121,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
-                app:layout_constraintStart_toEndOf="@id/favoriteIcon"
                 app:layout_constraintBottom_toBottomOf="@id/favoriteIcon"
+                app:layout_constraintStart_toEndOf="@id/favoriteIcon"
                 app:layout_constraintTop_toTopOf="parent"
+                android:textColor="#999999"
                 tools:text="16"></TextView>
+
             <ImageButton
-                android:background="@drawable/ic_favorite"
                 android:id="@+id/favoriteIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
+                android:background="@drawable/ic_favorite"
                 app:layout_constraintEnd_toStartOf="@id/commentIcon"
                 app:layout_constraintTop_toTopOf="parent"></ImageButton>
         </androidx.constraintlayout.widget.ConstraintLayout>
