--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,15 @@
             app:layout_constraintTop_toBottomOf="@id/createTime"
             tools:text="Netsdfsdfsdfskdfksdgjfgsidgfusgdfuygsdufygsdfsdfsdfsdfsdfology"></TextView>
 
+        <ImageButton
+            android:id="@+id/geolocation"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/ic_location_on"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></ImageButton>
+
         <TextView
             android:id="@+id/postContent"
             android:layout_width="match_parent"
