--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,17 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"></ImageButton>
 
+        <ImageButton
+            android:id="@+id/interactive"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
+            app:layout_constraintTop_toBottomOf="@id/avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            ></ImageButton>
+
         <TextView
             android:id="@+id/postContent"
             android:layout_width="match_parent"
@@ -66,7 +77,7 @@
             android:layout_marginVertical="8dp"
             android:textColor="#000000"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@id/avatar"
+            app:layout_constraintTop_toBottomOf="@id/interactive"
             tools:text="Моё первое сообщение"></TextView>
 
         <TextView
