--- a/app/src/main/res/layout/inner_elem.xml
+++ b/app/src/main/res/layout/inner_elem.xml
@@ -88,8 +88,7 @@
         android:id="@+id/repost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/commercial"
         app:layout_constraintStart_toStartOf="parent"
-        tools:itemCount="0"
-        ></androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@id/commercial"
+        tools:itemCount="0"></androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
