--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#E8EAF6"
     tools:context=".MainActivity">
 
@@ -11,4 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/post_elem" />
+
+    <ProgressBar
+        android:id="@+id/loadContainer"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:indeterminate="true"></ProgressBar>
 </androidx.constraintlayout.widget.ConstraintLayout>
