--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -23,7 +23,7 @@
             android:id="@+id/edt_registration_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/activity_feed_margin_inner"
             android:inputType="text"
             android:maxLength="10"
             tools:text="login" />
@@ -34,7 +34,7 @@
         android:id="@+id/til_registration_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/activity_feed_margin_inner"
         android:hint="@string/enter_password"
         app:layout_constraintBottom_toTopOf="@+id/til_registration_repeat_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/til_registration_repeat_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/activity_feed_margin_inner"
         android:hint="@string/repeat_password"
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
